Fixed bug #26695 (Reflection API does not recognize mixed-case class hints) # The exception part